# pycon-workshop

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
docs/: 00_UTILS.md  01_SETUP.md  02_USEFULL_DOCS.md
pages/: collage.py  data_visualization.py  meme.py  new_page.py
utils/: params.py
utils/data/: test.csv
utils/platform/: header.py
