[tool.poetry]
name = "workshop_streamlit"
version = "0.1.0"
description = ""
authors = ["Andrea Pastelli <andrea.pastelli@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
pandas = "^2.1.3"
numpy = "^1.26.2"
ipykernel = "^6.27.1"
sqlalchemy = "^2.0.23"
pydantic = "^2.5.2"
openpyxl = "^3.1.2"
xlsxwriter = "^3.2.0"
pyodbc = "^5.1.0"
ipywidgets = "^8.1.2"
streamlit = "^1.45.0"
pygame = "^2.6.1"
matplotlib = "^3.10.1"
plotly = "^6.0.1"

[tool.poetry.dev-dependencies]
python-dotenv = "^1.0.0"
pytest = "^7.4.3"
black = "^23.11.0"
autopep8 = "^2.0.4"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"